# Project-AEGIS

./: ADVANCED_ALGORITHM_PROCESSING.py  AEGIS_COMPLETE_WORKSPACE.py  AEGIS_DESKTOP_DASHBOARD.py  AEGIS_MASS_EXECUTION.py  AEGIS_PROJECT_PLAN.md  AEGIS_TASK_ALLOCATION.md  AEGIS_THREAT_INTELLIGENCE_ENHANCED.py  AEGIS_WEB_INTEGRATION.py  BANKING_INTEGRATION_SUMMARY.md  BANKING_OPERATIONS_LAUNCHER.py  BANKING_SOCIAL_INTELLIGENCE_CORE.py  BANKING_SOCIAL_INTELLIGENCE_SUMMARY.md  BANKING_TOOLS_ACCOUNT_MANIPULATION.py  BANKING_TOOLS_ACCOUNT_MANIPULATION_FIXED.py  BANKING_TOOLS_ATM_NETWORK.py  BANKING_TOOLS_CREDIT_CARD.py  BANKING_TOOLS_CRYPTOCURRENCY.py  BANKING_TOOLS_EXPORT_INTEGRATION.py  BANKING_TOOLS_EXPORT_SYSTEM.py  BANKING_TOOLS_SWIFT_ACCESS.py  BANKING_TOOLS_TRANSACTION_MONITORING.py  BASELINE_QUICK_REFERENCE.md  BASELINE_VERSION_DOCUMENTATION.md  BEYOND_ETERNITY_PHASE.py  CENTRAL_BANKING_INTERFACE.py  CLUSTER_TASK_ALLOCATION_SYSTEM.py  COMPLETE_PHASE_EXECUTION.py  COMPLETE_PHASE_EXECUTION_SUMMARY.md  COMPLETE_REVOLUTIONARY_JOURNEY.md  COMPLETE_UNIQUENESS_ROADMAP.md  COMPREHENSIVE_SECURITY_TESTING.py  CURSOR_COMPOSER_EXTENSION_SUMMARY.md  DESKTOP_DEPLOYMENT_SUMMARY.md  Dockerfile  ENHANCED_CENTRAL_BANKING_SUMMARY.md  ENHANCED_UI_UX_SUMMARY.md  ETERNAL_REVOLUTION_PHASE.py  EXECUTION_COMPLETE_SUMMARY.md  EXECUTION_PROGRESS_SUMMARY.md  EXPERT_ACCOUNT_MANIPULATION_EXECUTOR.py  (+106 more)
.github/workflows/: ai-pentest-pipeline.yml  ci-cd.yml
algorithms/: algorithm_assignments.py  algorithm_assignments_fixed.py  algorithm_task_assignments.py
analysis/: human_intelligence_analysis.py
banking_tools_export_20250804_144613/: account_manipulation_results.json  atm_network_results.json  credit_card_results.json  cryptocurrency_results.json  export_summary.txt  swift_access_results.json  transaction_monitoring_results.json
banking_tools_export_20250804_144632/: account_manipulation_results.csv  account_manipulation_results.json  account_manipulation_results.txt  atm_network_results.json  atm_network_results.txt  credit_card_results.json  credit_card_results.txt  cryptocurrency_results.csv  cryptocurrency_results.json  export_summary.txt  swift_access_results.csv  swift_access_results.json  swift_access_results.txt  transaction_monitoring_results.csv  transaction_monitoring_results.json  transaction_monitoring_results.txt
banking_tools_export_20250804_144634/: account_manipulation_results.json  account_manipulation_results.txt  atm_network_results.csv  atm_network_results.json  atm_network_results.txt  credit_card_results.csv  credit_card_results.json  credit_card_results.txt  cryptocurrency_results.json  cryptocurrency_results.txt  export_summary.txt  swift_access_results.json  swift_access_results.txt  transaction_monitoring_results.json  transaction_monitoring_results.txt
banking_tools_export_20250804_182855/: account_manipulation_results.json  atm_network_results.json  credit_card_results.json  swift_access_results.json  transaction_monitoring_results.json
central_banking_export_20250804_175732/: export_summary.json
cursor_aegis_extension/: package.json
cursor_aegis_extension/src/: extension.ts
demonstrations/: bank_penetration_demo.py
dev/: ai_core.py  deep_learning_core.py  error_handler.py  model_manager.py  unsupervised_learning.py
docs/: ARCHITECTURE.md
infrastructure/terraform/: main.tf  variables.tf
interfaces/: __init__.py  api_gateway.py  cli_interface.py  web_interface.py
logs/: ai_ml_alerts.json  operational_alerts.json
monitoring/: ai_ml_monitor.py  integrated_monitor.py  operational_monitor.py
ops/: main_interface.py  stealth_data_miner.py
public/: index.html
real_banking_analysis_export_20250804_162716/: analysis_results.json  banking_data.json
schemas/: complete_system_schema.py  system_schema.json  system_schema.py
silos/developmental/: __init__.py  advanced_algorithms.py  aegis_ai_core.py  ai_ml_chat_core.py  ai_ml_engine.py  cursor_composer_extension.py  cursor_composer_extension_fixed.py  data_processing_core.py  data_workspace_core.py  enhanced_ui_ux_core.py  jarvis_ai_core.py  modern_ui_ux_core.py  nlp_query_engine.py  (+1 more)
src/: ChatClient.php  ChatServer.php
super_ai/: infinite_learning_system.py
teams/: aegis_team_task_allocator.py  master_team_coordinator.py  team_1_ai_research_core.py  team_2_data_science_analytics.py  team_3_model_training_deployment.py  team_4_vulnerability_research.py  team_5_penetration_testing_core.py  team_6_security_automation.py  team_7_workflow_automation.py  team_8_system_monitoring.py  team_9_deployment_devops.py  team_coordinator.py  team_structure.md
vscode_aegis_extension/: package.json
(+59 files in other folders)
